Fixed Misaligned table border
(cherry picked from commit aa938d911b61b08185dc57a0887f3f33e3c6e1f2)

Closes #8176

--- a/frontend/src/InteractiveSearch/InteractiveSearchRow.css
+++ b/frontend/src/InteractiveSearch/InteractiveSearchRow.css
@@ -52,11 +52,7 @@
   width: 75px;
 }
 
-.title {
-  composes: cell;
-}
-
-.title div {
+.titleContent {
   overflow-wrap: break-word;
 }
 
